Fixed footer with smaller images and spacing//gaps

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
   font-family: system-ui;
 }
 .card2 {
-  padding-right: 120px;
+  padding-right: 100px;
 }
 
 .wrapper {
@@ -25,9 +25,9 @@
   background: white;
 }
 
-footer {
+/* footer {
   padding-bottom: 2%;
-}
+} */
 
 #footer {
   display: flex;
@@ -35,7 +35,7 @@ footer {
   text-align: center;
 }
 
-footer h5 {
+footer h6 {
   text-decoration: underline;
 }
 
